--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="logo">
           <!-- Logo placeholder -->
           <img
-            src="C:\Users\User.DESKTOP-USGGAG7\Desktop\Pizza Place App\img\logo.png"
+            src="img/logo.png"
             alt="Pizza Place Logo"
             id="logo"
           />
@@ -63,7 +63,7 @@
         <!-- Replace this with your actual video -->
         <video autoplay muted loop id="hero-video">
           <source
-            src="C:\Users\User.DESKTOP-USGGAG7\Desktop\Pizza Place App\img\bcvideo.mp4"
+            src="img/bcvideo.mp4"
             type="video/mp4"
           />
           Your browser does not support the video tag.
